Deadly Diamond
#include <iostream>

using namespace std;
class A{
    public:
    void fun()
    {
        cout<<"a"<<endl;
    }
};
class B:public A{
    public:
    
};
class C:public A{
    public:
};
class D : public B, public C{
    public:
};

int main()
{
    D dl;
    dl.fun();
    
}

// OUTPUT :
main.cpp:25:8: error: request for member ‘fun’ is ambiguous
   25 |     dl.fun();
      |        ^~~
main.cpp:6:10: note: candidates are: ‘void A::fun()’
    6 |     void fun()
      |          ^~~
main.cpp:6:10: note:                 ‘void A::fun()’
